Update social sharing description

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Ariton" />
     <meta
       property="og:description"
-      content="Freedom to Connect, Power to Own"
+      content="Help and Support for Ariton, the Community Super App"
     />
     <meta
       property="og:image"
